requests display for both user types

--- a/templates/newsFeed.html
+++ b/templates/newsFeed.html
@@ -78,12 +78,12 @@
 <div class="col-sm-2 well">
           <div class="thumbnail">
             <p><strong>Requests Received</strong></p>
-            <table></table>
-            <tr ng-repeat="r in requestReceived"> <!-- DISPLAY ALL -->
+            <table>
+            <tr ng-repeat="r in allReqs"> <!-- DISPLAY ALL -->
 					       <!--<td><p ng-repeat="res in found2" ng-bind="res"></p></td>-->
-					       <td ng-bind="r.name"></td>
+					       <td ng-bind="r.username"></td>
 					       <td ng-bind="r.email"></td>
-					       <td ng-bind="r.mealType"></td>
+					       <td ng-bind="r.mealtype"></td>
 					       <td ng-bind="r.starttime"></td>
 					       <td ng-bind="r.endtime"></td>
             </table>
@@ -157,14 +157,16 @@
           <div class="thumbnail">
             <p><strong>Requests Sent</strong></p>
             <table>
-            <tr ng-repeat="r in requestSent"> <!-- DISPLAY ALL -->
+            <tr ng-repeat="r in userRequests"> <!-- DISPLAY ALL -->
 					       <!--<td><p ng-repeat="res in found2" ng-bind="res"></p></td>-->
-					       <td ng-bind="r.name"></td>
-					       <td ng-bind="r.email"></td>
-					       <td ng-bind="r.mealType"></td>
+					       <td ng-bind="r.username"></td>
+					       <!--<td ng-bind="r.email"></td>-->
+					       <td ng-bind="r.mealtype"></td>
 					       <td ng-bind="r.starttime"></td>
 					       <td ng-bind="r.endtime"></td>
+					 </tr>
 					 </table>
+					 
           </div>
       
           <div class="well">
