--- a/templates/newsFeed.html
+++ b/templates/newsFeed.html
@@ -75,9 +75,9 @@
         <div class="col-md-12">
           <div class="well">
             <p><strong>Requests Received</strong></p>
-            <table>
+            <table align="center">
               <tbody align="center">
-            <tr ng-repeat="r in allReqs"> <!-- DISPLAY ALL -->
+            <tr align="center" ng-repeat="r in allReqs"> <!-- DISPLAY ALL -->
 					       <!--<td><p ng-repeat="res in found2" ng-bind="res"></p></td>-->
 					       <td align="center" ng-bind="r.username"></td>
 					       <td align="center" ng-bind="r.email"></td>
@@ -161,7 +161,7 @@
             <p><strong>Requests Received</strong></p>
             <table>
               <tbody align="center">
-            <tr ng-repeat="r in userRequests"> <!-- DISPLAY ALL -->
+                <tr align="center" ng-repeat="r in userRequests"> <!-- DISPLAY ALL -->
 					       <!--<td><p ng-repeat="res in found2" ng-bind="res"></p></td>-->
 					       <td align="center" ng-bind="r.username"></td>
 					       <!--<td ng-bind="r.email"></td>-->
