--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -158,7 +158,7 @@
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav">
           <li class="active"><a href="/home">Home</a></li>
-          <li><a href="#">Messages</a></li>
+          <!--<li><a href="#">Messages</a></li>-->
           <!-- <li>Hello {{searchFor}} </li>  socket testing -N8 -->
         </ul>
         <form class="navbar-form navbar-right" role="search" ng-submit="search()">
