--- a/templates/newsFeed.html
+++ b/templates/newsFeed.html
@@ -159,7 +159,7 @@
         <div class="col-md-12">
           <div class="well">
             <p><strong>Requests Received</strong></p>
-            <table>
+            <table align="center">
               <tbody align="center">
                 <tr align="center" ng-repeat="r in userRequests"> <!-- DISPLAY ALL -->
 					       <!--<td><p ng-repeat="res in found2" ng-bind="res"></p></td>-->
