cleaning up code

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -197,8 +197,8 @@
       
         <div class="alert alert-success fade in">
           <a href="#" class="close" data-dismiss="alert" aria-label="close">×</a>
-          <p><strong>Ey!</strong></p>
-            People are looking at your profile. Find out who.
+          <p><strong>Welcome!</strong></p>
+            
         </div>
         <p><a class="btn" href="https://eagleone-sp.blackboard.com/eAccounts/AnonymousHome.aspx?ReturnUrl=%2feaccounts%2fAccountSummary.aspx%3fmenu%3d0&menu=0">Check Your Swipes!</a></p>
       </div>
