commit before pull

--- a/templates/newsFeed.html
+++ b/templates/newsFeed.html
@@ -78,7 +78,7 @@
 <div class="col-sm-2 well">
           <div class="thumbnail">
             <p><strong>Requests Received</strong></p>
-            <table></table>
+            <table>
             <tr ng-repeat="r in requestReceived"> <!-- DISPLAY ALL -->
 					       <!--<td><p ng-repeat="res in found2" ng-bind="res"></p></td>-->
 					       <td ng-bind="r.name"></td>
